@@ -66,6 +66,31 @@ def check_for_fm():
 
 ##########################################
 # KODI-RD-IL
+def check_if_downloader_app_installed():
+    try:
+        updater = xbmcaddon.Addon('script.kodi.android.update')
+    except RuntimeError as e:
+        return False
+        
+    file_manager = int(updater.getSetting('File_Manager'))
+    custom_manager = updater.getSetting('Custom_Manager')
+    use_manager = {0: 'com.android.documentsui', 1: custom_manager}[file_manager]
+    apps = xbmcvfs.listdir('androidapp://sources/apps/')[1]
+    
+    if use_manager == 'com.esaba.downloader' and 'com.esaba.downloader' not in apps:
+        dialog = xbmcgui.Dialog()
+        choose = dialog.yesno(CONFIG.ADDONTITLE, 'אפליקציית Downloader לא מותקנת במכשיר שלך! האם ברצונך להגדיר מנהל קבצים אחר עבור ההתקנה?')
+        if not choose:
+            dialog.ok(CONFIG.ADDONTITLE, 'לאחר הורדת ה-APK, אם לא קורה כלום, הגדר מנהל קבצים דרך "הגדרות Kodi Android Installer".'.format(CONFIG.ADDONTITLE))
+        else:
+            from resources.libs import install
+            install.choose_file_manager()
+            
+    return True
+##########################################
+
+##########################################
+# KODI-RD-IL
 def install_script_kodi_android_update_addon():
     from resources.libs.common import tools
     if tools.platform() == 'android' and not xbmc.getCondVisibility('System.HasAddon(script.kodi.android.update)'):
@@ -84,7 +109,10 @@ def apk_menu(url=None):
         
     ##########################################
     # KODI-RD-IL
+    install_script_kodi_android_update_addon()
+    check_if_downloader_app_installed()
     directory.add_separator(f'[B]גרסת קודי נוכחית: {CONFIG.KODIV}[/B]')
+    directory.add_file('הגדרות Kodi Android Installer (עבור בחירת מנהל קבצים להתקנה)', {'mode': 'settings', 'name': 'script.kodi.android.update'}, icon=CONFIG.ICONSETTINGS, themeit=CONFIG.THEME_YELLOW)
     directory.add_separator()
     ##########################################
 
@@ -122,7 +150,6 @@ def apk_menu(url=None):
     ##########################################
     # KODI-RD-IL
     directory.add_dir('קבצי APK רשמיים של קודי', {'mode': 'kodiapk'}, icon=CONFIG.ICONAPK, themeit=CONFIG.THEME2)
-    install_script_kodi_android_update_addon()
     ##########################################
 
 
